started write up and work on options sizing

--- a/GetData.ipynb
+++ b/GetData.ipynb
@@ -2,19 +2,236 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import quandl\n",
     "from settings import quandl_code\n",
+    "import numpy as np\n",
     "\n",
     "quandl.ApiConfig.api_key = quandl_code\n",
-    "df=quandl.get('EOD/JIGB', start_date='2017-12-26', end_date='2018-12-26')\n",
-    "interest=quandl.get(\"FED/RILSPDEPM03_N_B\", authtoken=quandl_code)\n",
-    "vix=quandl.get('SCF/CBOE_VX1_ON', start_date='2017-12-24', end_date='2018-12-26')\n"
+    "startDate='2007-05-21'\n",
+    "endDate='2018-11-30'\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data for the SPY, short-term interest rates and the VIX\n",
+    "# The VIX data only goes back to 2007\n",
+    "\n",
+    "spy=quandl.get('EOD/SPY', start_date=startDate, end_date=endDate)\n",
+    "interest=quandl.get(\"FED/RILSPDEPM03_N_B\", authtoken=quandl_code)\n",
+    "vix=quandl.get('SCF/CBOE_VX1_ON', start_date=startDate, end_date=endDate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Settle</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-05-21</th>\n",
+       "      <td>14.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-22</th>\n",
+       "      <td>14.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-23</th>\n",
+       "      <td>14.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-24</th>\n",
+       "      <td>15.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-25</th>\n",
+       "      <td>15.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Settle\n",
+       "Date              \n",
+       "2007-05-21   14.90\n",
+       "2007-05-22   14.99\n",
+       "2007-05-23   14.92\n",
+       "2007-05-24   15.05\n",
+       "2007-05-25   15.10"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the returns for the adj_spy stream\n",
+    "\n",
+    "spy['return']=np.log(spy['Adj_Close']/spy['Adj_Close'].shift())\n",
+    "\n",
+    "spy=spy[['Close','return']]\n",
+    "vix=vix[['Settle']]\n",
+    "\n",
+    "spy.head()\n",
+    "vix.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Close</th>\n",
+       "      <th>return</th>\n",
+       "      <th>Settle</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-05-21</th>\n",
+       "      <td>152.539993</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.90</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-22</th>\n",
+       "      <td>152.419998</td>\n",
+       "      <td>-0.000787</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-23</th>\n",
+       "      <td>152.440002</td>\n",
+       "      <td>0.000131</td>\n",
+       "      <td>14.92</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-24</th>\n",
+       "      <td>151.059998</td>\n",
+       "      <td>-0.009094</td>\n",
+       "      <td>15.05</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-25</th>\n",
+       "      <td>151.690002</td>\n",
+       "      <td>0.004162</td>\n",
+       "      <td>15.10</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Close    return  Settle  Value\n",
+       "Date                                           \n",
+       "2007-05-21  152.539993       NaN   14.90   5.35\n",
+       "2007-05-22  152.419998 -0.000787   14.99   5.35\n",
+       "2007-05-23  152.440002  0.000131   14.92   5.35\n",
+       "2007-05-24  151.059998 -0.009094   15.05   5.35\n",
+       "2007-05-25  151.690002  0.004162   15.10   5.35"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#merge all dataframes onto one csv\n",
+    "\n",
+    "df=pd.concat([spy, vix, interest], axis=1, join='inner')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('time_series.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
